--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "cra-template": "1.1.3",
+    "i18next": "^21.6.16",
+    "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.6",
     "react-icons": "^4.3.1",
+    "react-intl": "^5.25.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
