--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-html2pdf": "^1.0.1",
     "react-i18next": "^11.16.6",
     "react-icons": "^4.3.1",
     "react-intl": "^5.25.0",
@@ -41,5 +42,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "prettier": "^2.6.2"
   }
 }
