--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.0.0",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.0.0",
     "react-html2pdf": "^1.0.1",
     "react-i18next": "^11.16.6",
     "react-icons": "^4.3.1",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-to-print": "^2.14.6",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2"
   },
